Don't crash when removing nameless user

https://bugzilla.gnome.org/show_bug.cgi?id=647893